@@ -39,11 +39,15 @@ token tokens[] = {
 	token(TKN_TORPEDOES, "torpedoes"),
 	token(TKN_TXTNONE, "none"),
 	token(TKN_T1, "T1"),
+	token(TKN_T2, "T2"),
 	token(TKN_T3, "T3"),
+	token(TKN_T3A, "T3a"),
+	token(TKN_T4, "T4"),
 	token(TKN_T5, "T5"),
+	token(TKN_T11, "T11"),
+	token(TKN_T1FAT, "T1FAT"),
 	token(TKN_T3FAT, "T3FAT"),
 	token(TKN_T6LUT, "T6LUT"),
-	token(TKN_T11, "T11"),
 	token(TKN_LARGEMERCHANT, "largemerchant"),
 	token(TKN_MEDIUMMERCHANT, "mediummerchant"),
 	token(TKN_SMALLMERCHANT, "smallmerchant"),
